<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">BMI Application</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_name">Fullname</string>
    <string name="btn_login">Login</string>
    <string name="btn_register">Register</string>
    <string name="btn_link_to_register">Not a member? Sign up now.</string>
    <string name="btn_link_to_login">Already registred! Login Me In.</string>
    <string name="welcome">Welcome</string>
    <string name="btn_logout">Logout</string>
    <string name="name">Fullname</string>
    <string name="btn_Calculate">Calculate BMI</string>
    <string name="btn_Compare">Compare BMI</string>
    <string name="btn_Settings">Settings</string>
    <string name="btn_Track">Track BMI</string>
    <string name="btn_Home">Home</string>
    <string name="btn_Delete_Account">Delete Account</string>
	
    <string name="Height_Text_View">Height</string>
    <string name="Weight_Text_View">Weight</string>
    <string name="Store_BMI_Button">Store BMI</string>
    <string name="Calculate_BMI_Button">Calculate BMI</string>
    <string name="BMI_High_Text_View">BMI High</string>
    <string name="BMI_Low_Text_View">BMI Low</string>
    <string name="Current_BMI_Text_View">Current BMI</string>
    <string name="Username_Text_View">Username</string>
    <string name="Password_Text_View">Password</string>
    <string name="Login_Button">Login</string>
    <string name="No_Account_Button">Don\'t Have an Account</string>
    <string name="Confirm_Password_Text_View">Confirm Password</string>
    <string name="Units_Text_View">Units</string>
    <string name="Pounds_RadioButton">Pounds</string>
    <string name="Kilograms_RadioButton">Kilograms</string>
    <string name="Create_Button">Create</string>
    <string name="Settings_Text_View">Settings</string>
    <string name="Notifications_Text_View">Notifications</string>
    <string name="On_RadioButton">On</string>
    <string name="Off_RadioButton">Off</string>
    <string name="Log_Off_Button">Log Off</string>
</resources>
